[gd_scene load_steps=3 format=3 uid="uid://bj8rxrkwnxaha"]

[ext_resource type="Script" path="res://script/time_lable2.gd" id="1_1ioa0"]
[ext_resource type="PackedScene" uid="uid://bvjw36vy7jtkf" path="res://test/number_changer.tscn" id="2_lu6kg"]

[node name="time_lable" type="Label" node_paths=PackedStringArray("timer")]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -195.0
offset_right = -115.0
offset_bottom = 80.0
grow_horizontal = 2
script = ExtResource("1_1ioa0")
timer = NodePath("Timer")
wait_time = 2

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="flip_clock" type="Node2D" parent="."]

[node name="minute_ten" parent="flip_clock" instance=ExtResource("2_lu6kg")]
position = Vector2(-40, 2.08165e-12)

[node name="minue_one" parent="flip_clock" instance=ExtResource("2_lu6kg")]
position = Vector2(-15, 2.08165e-12)

[node name="second_ten" parent="flip_clock" instance=ExtResource("2_lu6kg")]
position = Vector2(15, 2.08165e-12)

[node name="second_one" parent="flip_clock" instance=ExtResource("2_lu6kg")]
position = Vector2(40, 2.08165e-12)

[node name="time_text" type="Label" parent="."]
layout_mode = 0
offset_top = 25.0
offset_right = 48.0
offset_bottom = 74.0
text = "倒计时
09:12"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
